[gd_scene load_steps=48 format=3 uid="uid://b2t5s0vqdgs03"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_26af4"]
[ext_resource type="Texture2D" uid="uid://d4ie3ug0dgksl" path="res://assets/Monsters_Creatures_Fantasy/Skeleton/Attack.png" id="1_ckdck"]
[ext_resource type="Texture2D" uid="uid://cayg1idtb85h7" path="res://assets/Monsters_Creatures_Fantasy/Skeleton/Idle.png" id="2_ntb7e"]
[ext_resource type="Texture2D" uid="uid://cr2p0wa4xmb5d" path="res://assets/Monsters_Creatures_Fantasy/Skeleton/Death.png" id="2_t3642"]
[ext_resource type="Texture2D" uid="uid://b86hmd5ocatgv" path="res://assets/Monsters_Creatures_Fantasy/Skeleton/Walk.png" id="3_51i6a"]
[ext_resource type="Texture2D" uid="uid://bu273agk6l53g" path="res://assets/Monsters_Creatures_Fantasy/Skeleton/Take Hit.png" id="3_m1bd1"]
[ext_resource type="Texture2D" uid="uid://bsvdso1phxnx4" path="res://assets/Monsters_Creatures_Fantasy/Skeleton/Shield.png" id="5_x1enp"]
[ext_resource type="PackedScene" uid="uid://ca07plivmnrj1" path="res://scenes/health_bar.tscn" id="8_4k18r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_suujc"]
atlas = ExtResource("1_ckdck")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_80cbn"]
atlas = ExtResource("1_ckdck")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_gypqb"]
atlas = ExtResource("1_ckdck")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_rklji"]
atlas = ExtResource("1_ckdck")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bh5af"]
atlas = ExtResource("1_ckdck")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bivma"]
atlas = ExtResource("1_ckdck")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_eflnu"]
atlas = ExtResource("1_ckdck")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_s08fu"]
atlas = ExtResource("1_ckdck")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_un16c"]
atlas = ExtResource("5_x1enp")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_iaw40"]
atlas = ExtResource("5_x1enp")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_46ify"]
atlas = ExtResource("5_x1enp")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_36unw"]
atlas = ExtResource("5_x1enp")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4wxm"]
atlas = ExtResource("2_t3642")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_nw8ap"]
atlas = ExtResource("2_t3642")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7r5d3"]
atlas = ExtResource("2_t3642")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gy3n"]
atlas = ExtResource("2_t3642")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnmp6"]
atlas = ExtResource("2_t3642")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqu1v"]
atlas = ExtResource("3_m1bd1")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbfnu"]
atlas = ExtResource("3_m1bd1")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtyuu"]
atlas = ExtResource("3_m1bd1")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_josts"]
atlas = ExtResource("3_m1bd1")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmx4f"]
atlas = ExtResource("2_ntb7e")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2ovj"]
atlas = ExtResource("2_ntb7e")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyvdi"]
atlas = ExtResource("2_ntb7e")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdcov"]
atlas = ExtResource("2_ntb7e")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhrn2"]
atlas = ExtResource("3_51i6a")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tatl"]
atlas = ExtResource("3_51i6a")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqv3g"]
atlas = ExtResource("3_51i6a")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dsp0"]
atlas = ExtResource("3_51i6a")
region = Rect2(450, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_u14ig"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_suujc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80cbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gypqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rklji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bh5af")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bivma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eflnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s08fu")
}],
"loop": true,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_un16c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iaw40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46ify")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36unw")
}],
"loop": true,
"name": &"block",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4wxm")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nw8ap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7r5d3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gy3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnmp6")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqu1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbfnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtyuu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_josts")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmx4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2ovj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyvdi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdcov")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhrn2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tatl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqv3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dsp0")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_d3vnx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../HurtArea2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_cujrw"]
resource_name = "attack"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../HurtArea2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kaigo"]
_data = {
"RESET": SubResource("Animation_d3vnx"),
"attack": SubResource("Animation_cujrw")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uxqhg"]
size = Vector2(11.5625, 40)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_17kfk"]
radius = 11.25
height = 52.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_byl0s"]
size = Vector2(101.6, 24.8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dillg"]
size = Vector2(152.5, 38.7501)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xobc7"]
size = Vector2(56.25, 46.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yootg"]
size = Vector2(56.25, 46.25)

[node name="Enemy" type="CharacterBody2D"]
scale = Vector2(0.8, 0.8)
collision_layer = 8
collision_mask = 6
script = ExtResource("1_26af4")
MAX_HP = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_u14ig")
animation = &"attack"

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_kaigo")
}

[node name="TurnArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="TurnArea2D"]
position = Vector2(23.2812, -3.75)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_uxqhg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6.25, -2.38419e-07)
shape = SubResource("CapsuleShape2D_17kfk")

[node name="ActionTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LeftDetectPlayerArea2D" type="Area2D" parent="."]
scale = Vector2(1.5625, 1.5625)
collision_layer = 0
collision_mask = 2

[node name="LeftDetectPlayerCollisionShape2D" type="CollisionShape2D" parent="LeftDetectPlayerArea2D"]
position = Vector2(-46.8, -2.8)
shape = SubResource("RectangleShape2D_byl0s")

[node name="RightDetectPlayerArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="RightDetectPlayerCollisionShape2D" type="CollisionShape2D" parent="RightDetectPlayerArea2D"]
position = Vector2(83.75, -4.375)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_dillg")

[node name="CanHitArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanHitArea2D"]
position = Vector2(45.625, -5.625)
shape = SubResource("RectangleShape2D_xobc7")

[node name="HurtArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea2D"]
position = Vector2(45.625, -5.625)
shape = SubResource("RectangleShape2D_yootg")
disabled = true

[node name="HealthBar" parent="." instance=ExtResource("8_4k18r")]
offset_left = -15.0
offset_top = -38.75
offset_right = 33.0
offset_bottom = -33.75

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="ActionTimer" to="." method="_on_action_timer_timeout"]
[connection signal="body_entered" from="HurtArea2D" to="." method="_on_hurt_area_2d_body_entered"]
